--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
   <div class="page-container drawer-page-content" id="PageContainer">
     <main class="main-content js-focus-hidden" id="MainContent" role="main" tabindex="-1">
-      <!-- BEGIN content_for_index -->
+      
 
       <div id="shopify-section-1644536830d85a301a" class="shopify-section index-section index-section--flush">
         <div data-section-id="1644536830d85a301a" class="featured-hero">
@@ -320,6 +320,7 @@
                 <div class="text-center">
                   <!-- Start Placeholder Cupcake Image -->
                   <img id="featured-cupcake-img" src="assets/mystery.jpg"
+                    onclick="FlavorOfTheDayClick()"
                     data-widths="[180, 360, 540, 720, 900, 1080, 1296, 1512, 1728, 2048]" data-sizes="auto"
                     alt="Flavor of the Day Cupcake" />
                   <!-- End Placeholder Cupcake Image -->
